FreeST/test/Programs/InvalidTests/typedefSkip/typedefSkip.fst
type T : TU = rec x . Skip

main : Int
main = 5
